...
                bottom: 40 ,
                left: 20,
                right: 20,
                child: SizedBox(
                  width: MediaQuery.of(context).size.width * 0.8,
                  child: OutlinedButton(
                    key: const Key('updatePhotoInformation'),
                    style: OutlinedButton.styleFrom(
                      shape: RoundedRectangleBorder(
                        borderRadius: BorderRadius.circular(0.0),
                      ),
                      backgroundColor: Colors.white,
                      side: const BorderSide(color: Color(0xff084470), width: 4),
...
                                  border: OutlineInputBorder(),
                                  labelText: 'Title',
                                ),
                              ),
                              const SizedBox(height: 10,),
                              TextField(
                                key: const Key('description'),
                                controller: descriptionController,
                                decoration: const InputDecoration(
                                  border: OutlineInputBorder(),
                                  labelText: 'Description',
                                ),
                              ),
...
